# CharMinder

./: README.md  pyproject.toml  ruff.toml
.github/actions/charminder/: README.md  action.yml
.github/workflows/: charminder-example.yml  charminder-template.yml  ci-cd.yml
src/charminder/: __init__.py  cli.py  encoding_checker.py  reporting.py  url_utils.py
tests/: conftest.py  test_cli.py  test_encoding_checker.py  test_models.py  test_reporting.py  test_url_utils.py
