[project]
name = "charminder"
version = "0.1.0"
description = "A character encoding detective for text files and URLs - catch encoding issues before they evolve into problems!"
readme = "README.md"
authors = [
    { name = "Nelson Moore", email = "15333969+nelsonwmoore@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
]

[project.scripts]
charminder = "charminder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
